WIP, still searching for the runway coord

--- a/librealspace/librealspace.vcxproj.filters
+++ b/librealspace/librealspace.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="..\src\Base.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\RSMission.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\TreArchive.h">
@@ -168,6 +171,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\Maths.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\RSMission.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
