--- a/librealspace/librealspace.vcxproj
+++ b/librealspace/librealspace.vcxproj
@@ -22,13 +22,13 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{9B5AC447-997B-4272-831B-11E7128EBD54}</ProjectGuid>
     <RootNamespace>librealspace</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -144,6 +144,7 @@
     <ClCompile Include="..\src\RSImage.cpp" />
     <ClCompile Include="..\src\RSImageSet.cpp" />
     <ClCompile Include="..\src\RSMapTextureSet.cpp" />
+    <ClCompile Include="..\src\RSMission.cpp" />
     <ClCompile Include="..\src\RSMusic.cpp" />
     <ClCompile Include="..\src\RSPalette.cpp" />
     <ClCompile Include="..\src\RSScreen.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="..\src\RSImage.h" />
     <ClInclude Include="..\src\RSImageSet.h" />
     <ClInclude Include="..\src\RSMapTextureSet.h" />
+    <ClInclude Include="..\src\RSMission.h" />
     <ClInclude Include="..\src\RSMusic.h" />
     <ClInclude Include="..\src\RSPalette.h" />
     <ClInclude Include="..\src\RSScreen.h" />
