wip on option.iff loading

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ SC/Debug/
 libRealSpace/Debug/*
 libRealSpace/packages/*
 libRealSpace/x64/*
+/librealspace/librealspace/x64/Debug
+/SC/SC/x64/Debug
+/SC/x64/Debug
