--- a/SC/SC.vcxproj.filters
+++ b/SC/SC.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="..\src\sc\AssetManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\sc\SCGameFlow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\sc\ShapeIDs.h">
@@ -126,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\sc\AssetManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\sc\SCGameFlow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
