--- a/SC/SC.vcxproj.filters
+++ b/SC/SC.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="..\src\sc\SCGameFlow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\sc\SCZone.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\sc\ShapeIDs.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\sc\SCGameFlow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\sc\SCZone.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
