--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(NeoSC VERSION 0.1.0 LANGUAGES C CXX)
 
-find_package(SDL REQUIRED)
-find_package(opengl REQUIRED)
+find_package(SDL2 REQUIRED)
+find_package(OpenGL REQUIRED)
 
 add_subdirectory(src)
-
+add_subdirectory(src/sc)
