--- a/src/sc/CMakeLists.txt
+++ b/src/sc/CMakeLists.txt
@@ -1,8 +1,11 @@
 file (GLOB SC_SOURCE "*.cpp")
 file (GLOB SC_HEADER "*.h")
 
-add_executable ("sc" PUBLIC ${SC_SOURCE} ${SC_HEADER})
+add_executable (neosc ${SC_SOURCE} ${SC_HEADER})
 
-target_include_directories("sc" PUBLIC ${SC_INCLUDES})
-target_include_directories("LibRealspace" PUBLIC ${LIBRARY_INCLUDES})
-target_link_libraries("sc" PRIVATE "LibRealspace")
+target_include_directories(neosc PUBLIC ${SC_INCLUDES})
+target_include_directories(neosc PUBLIC ${SDL2_INCLUDE_DIRS})
+target_include_directories(neosc PUBLIC ${OPENGL_INCLUDE_DIR})
+target_link_libraries(neosc PRIVATE librealspace)
+target_link_libraries(neosc PUBLIC ${SDL2_LIBRARIES})
+target_link_libraries(neosc PUBLIC ${OPENGL_LIBRARIES})
