--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,5 +7,6 @@ add_library(librealspace STATIC ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})
 
 target_include_directories(librealspace PUBLIC ${SDL2_INCLUDE_DIRS})
 target_include_directories(librealspace PUBLIC ${OPENGL_INCLUDE_DIR})
+target_link_libraries(librealspace PUBLIC SDL2_mixer_ext::SDL2_mixer_ext)
 target_include_directories(librealspace PUBLIC ${LIBRARY_INCLUDES})
 target_link_libraries(librealspace PUBLIC ${LIBRARY_LINKS})
