--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(NeoSC VERSION 0.1.0 LANGUAGES C CXX)
 
+add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+
 find_package(SDL2 REQUIRED)
 find_package(SDL2_mixer_ext CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
