Fix include path for Base.h in IffLexer.cpp to ensure correct file reference

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ find_package(OpenGL REQUIRED)
 add_subdirectory(src/sc)
 add_subdirectory(src/engine)
 add_subdirectory(src/realspace)
+add_subdirectory(src/commons)
