--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,10 @@ find_package(imgui CONFIG REQUIRED)
 set (OpenGL_GL_PREFERENCE LEGACY)
 find_package(OpenGL REQUIRED)
 
-add_subdirectory(src/sc)
-add_subdirectory(src/to)
+add_subdirectory(src/executables/sc)
+add_subdirectory(src/executables/to)
+add_subdirectory(src/executables/debugger)
+add_subdirectory(src/strike_commander)
 add_subdirectory(src/engine)
 add_subdirectory(src/realspace)
 add_subdirectory(src/commons)
